# BitQuill

./: .gitignore  354.main.js  418.main.js  661.main.js  96.main.js  CNAME  Cargo.toml  README.md  bitquill.bq  bitquill.md  cert.pem  forum.html  index.html  key.pem  main.js  modern-styles.css  noephs.bq  package-lock.json  package.json  vdf-worker.js  webpack.config.js
src/: constants.rs  error.rs  main.rs  utils.rs
src/app/: input.rs  mod.rs  ui.rs
src/merkle/: analysis.rs  document.rs  export.rs  hash.rs  mod.rs  serialization.rs  types.rs  verification.rs
src/vdf/: mod.rs
vdf-wasm/: Cargo.toml  build.sh  test.sh  test_key.pem
vdf-wasm/src/: lib.rs
wasm/: package.json  vdf_wasm.d.ts  vdf_wasm.js  vdf_wasm_bg.wasm.d.ts
