[package]
name = "bitquill"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
tui = { package = "ratatui", version = "0.23" }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
whoami = "1.4"
