[package]
name = "vdf-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
num-bigint = { version = "0.4", features = ["rand"] }  # Add rand feature
num-traits = "0.2"
num-integer = "0.1"  # Add this
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }  # Add this
serde_json = "1.0"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69" # Pinned to a compatible version

# Add dev-dependencies for testing
[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
opt-level = 3
lto = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = false        # <-- skip wasm-opt for --release builds

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false        # <-- skip it for --dev too, just in case
